[metadata]
name = pyupgrade_docs
version = 0.1.0
description = Run `pyupgrade` on python code blocks in documentation files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/verhovsky/pyupgrade_docs
author = Boris Verkhovskiy
author_email = boris@verhovs.ky
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    # Programming Language :: Python :: Implementation :: CPython
    # Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = pyupgrade_docs
install_requires = pyupgrade>=1.22.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pyupgrade-docs=pyupgrade_docs:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
